@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-6.1.1,v 1.1.2.15 2013/07/30 04:08:45 msaitoh Exp $
+# $NetBSD: CHANGES-6.1.1,v 1.1.2.16 2013/08/02 20:18:48 martin Exp $
 
 A complete list of changes from the NetBSD 6.1 release to the NetBSD 6.1.1
 release:
@@ -168,3 +168,9 @@ sys/net/if_mpls.c				1.9
 
 	Stop abusing kmem during softint context to prevent panic.
 	[kefren, ticket #921]
+
+sys/kern: uipc_socket.c				1.216
+
+	Fix an inversion in checking for authorization to drop TCP connections
+	found (and the obvious fix suggested) by Sander Bos.
+	[spz, ticket #927]
